--- a/util/hx-ambiente.tex
+++ b/util/hx-ambiente.tex
@@ -13,6 +13,7 @@
 \usepackage{float}
 \usepackage{fancyhdr}
 \usepackage[table]{xcolor}
+\usepackage{multirow}
 \usepackage{longtable}
 \usepackage{chngpage}
 \usepackage{grffile}
